fix: corrigir resolução do problema 4

--- a/Problema4.ipynb
+++ b/Problema4.ipynb
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 68,
       "metadata": {
         "id": "4X90uJx49e98"
       },
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 69,
       "metadata": {
         "id": "f_xgCKTI-7iT"
       },
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "YajwRL5f_THl"
       },
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 71,
       "metadata": {
         "id": "KYvcCx6a_yhO"
       },
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 72,
       "metadata": {
         "id": "lkuWxhg7_yyJ"
       },
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 73,
       "metadata": {
         "id": "X_TTAp8yAwj5"
       },
@@ -385,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 74,
       "metadata": {
         "id": "-xheonb7A6J5"
       },
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 75,
       "metadata": {
         "id": "cJDJx0O8BHHj"
       },
@@ -433,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 76,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -446,14 +446,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "status:  Unbounded\n",
+            "status:  Optimal\n",
             "funcao objetivo:  0.0\n",
             "\n",
             "Excessos (valores):\n",
             "  Excesso gordura (g): 0.0\n",
             "  Excesso sodio (mg): 0.0\n",
             "\n",
-            "Dieta recomendada: (porções por alimento):\n"
+            "Dieta recomendada: (porções por alimento):\n",
+            "Pão francês: 3.00 porções (50g)\n",
+            "Iogurte natural: 3.00 porções (100g)\n",
+            "Sardinha enlatada: 2.00 porções (100g)\n",
+            "Alface: 2.00 porções (100g)\n",
+            "Laranja: 1.00 porções (100g)\n"
           ]
         }
       ],
